syntax = "proto3";
option java_multiple_files = true;
package com.dmygaenko.api;

message HelloRequest {
    string firstName = 1;
    string lastName = 2;
}

message HelloResponse {
    string greeting = 1;
}

message FileRequest {
    string firstName = 1;
    string lastName = 2;
    bytes content = 3;
}

message FileResponse {
    string greeting = 1;
}

service HelloService {
    rpc hello(HelloRequest) returns (HelloResponse);
    rpc transferFile(FileRequest) returns (FileResponse);
}